# sentinelVault

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CLAUDE.md  DEEP_DIVE.md  Dockerfile  README.md  SKILLS.md  fly.toml  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
programs/sentinel_vault/: Cargo.toml
programs/sentinel_vault/src/: lib.rs
scripts/: demo-multi-agent.ts  demo-showcase.ts  demo-trading.ts  demo.ts  live-dashboard-demo.ts  live-dashboard.ts  setup-devnet.sh
src/: index.ts
src/agents/: arbitrage-agent.ts  base-agent.ts  liquidity-agent.ts  orchestrator.ts  portfolio-agent.ts  trading-agent.ts
src/cli/: index.ts
src/core/: keystore.ts  transaction-engine.ts  wallet.ts
src/dashboard/: server.ts
src/dashboard/public/: index.html
src/integrations/: ai-advisor.ts  amm-client.ts  dexscreener-client.ts  jupiter.ts  kora-client.ts  price-feed.ts
src/security/: audit-logger.ts  policy-engine.ts
src/types/: index.ts
tests/: ai-advisor.test.ts  amm-client.test.ts  arbitrage-agent.test.ts  audit-logger.test.ts  base-agent.test.ts  dexscreener-client.test.ts  jupiter.test.ts  keystore.test.ts  kora-client.test.ts  liquidity-agent.test.ts  orchestrator.test.ts  policy-engine.test.ts  portfolio-agent.test.ts  price-feed.test.ts  trading-agent.test.ts  wallet-operations.test.ts  wallet.test.ts
