[package]
name = "sentinel_vault"
version = "0.1.0"
description = "SentinelVault on-chain program — PDA-based agent vault for the SentinelVault AI agent framework"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
